[package]
name = "pino_xmodmap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "a tiny xmodmap parsing library"
repository = "https://github.com/MrPicklePinosaur/pino_xutils.git"

[lib]
name = "pino_xmodmap"
path = "src/lib.rs"

[dependencies]
